--- a/module_type.json.sample
+++ b/module_type.json.sample
@@ -1,13 +1,13 @@
 {
-  "title": "Docker Relay",
-  "default_name": "Docker Relay",
-  "short_description": "Generic Docker Relay module that can be used when developing new integrations",
-  "description": "Generic Docker Relay module description",
-  "tips": When configuring this integration, you must first gather some information from your third-party account if needed and add the Docker Relay Module\n\n1. Complete the **Add New Docker Relay Module** form:\n    - **Module Name** - Leave the default name or enter a name that is meaningful to you.\n   - **API KEY** - Enter third party api key\n9. Click **Save** to complete the Docker Relay module configuration.",
+  "title": "Recorded Future",
+  "default_name": "Recorded Future",
+  "short_description": "Recorded Future is a leading threat intelligence company committed to delivering real-time insights into emerging cyber threats.",
+  "description": "The Recorded Future Intelligence Platform produces accurate and actionable intelligence at scale, delivered in real time. It combines automated analytics with human expertise to unite an unrivaled variety of open source, dark web, technical sources, and original research. By dynamically categorizing, linking, and analyzing intelligence in real time, the platform delivers easy-to-consume insights for proactive and persistent risk mitigation, via role-based modules that are tailored to your needs.",
+  "tips": "When configuring this integration, you must obtain an authorization key from your Recorded Future account, and then add the Recorded Future Module in SecureX\n\n1. Log in to Recorded Future and click **Menu** proceed to **User Settings** choose **API Access** and generate an API Token.\n2. Copy the **API Token** into a file or leave the tab open.\n3. In SecureX, complete the **Add Recorded Future Integration Module** form:\n  - **Integration Module Name** - Leave the default name or enter a name that is meaningful to you.\n  - **Auth Key** - Enter the authorization key from your Recorded Future account.\n  - **Entities Limit** - Specify the maximum number of sightings, indicators, and judgements in a single response, per requested observable (must be a positive value. We recommend that you enter a limit in the range of 50 to 100. The default is 100 entities.\n4. Click **Save** to complete the Recorded Future integration module configuration.",
   "external_references": [
     {
-      "label": "Docker Relay Template",
-      "link": "https://github.com/CiscoSecurity/tr-05-docker-relay"
+      "label": "Official website",
+      "link": "https://www.recordedfuture.com/"
     }
   ],
   "configuration_spec": [
@@ -17,6 +17,13 @@
       "label": "API KEY",
       "tooltip": "The module API KEY",
       "required": true
+    },
+    {
+      "key": "custom_CTR_ENTITIES_LIMIT",
+      "required": false,
+      "type": "integer",
+      "label": "Entities Limit",
+      "tooltip": "Restricts the maximum number of Sightings, Indicators and Judgements. Please note that the number over 100 might lead to data inconsistency."
     }
   ],
   "capabilities": [
@@ -40,10 +47,6 @@
       "id": "respond",
       "description": "Response actions"
     },
-    {
-      "id": "tiles",
-      "description": "Dashboard tiles"
-    }
   ],
   "properties": {
     "supported-apis": [
@@ -53,9 +56,6 @@
       "refer/observables",
       "respond/observables",
       "respond/trigger",
-      "tiles",
-      "tiles/tile",
-      "tiles/tile-data"
     ],
     "auth-type": "configuration-token",
     "configuration-token-alg": "RS256",
