Add logic to filter observables before investigation Extend custom client from rfapi client Fix module type

--- a/module_type.json.sample
+++ b/module_type.json.sample
@@ -46,7 +46,7 @@
     {
       "id": "respond",
       "description": "Response actions"
-    },
+    }
   ],
   "properties": {
     "supported-apis": [
@@ -55,7 +55,7 @@
       "deliberate/observables",
       "refer/observables",
       "respond/observables",
-      "respond/trigger",
+      "respond/trigger"
     ],
     "auth-type": "configuration-token",
     "configuration-token-alg": "RS256",
