Rewrite mapping class to have subclasses for each ctim entity

--- a/module_type.json.sample
+++ b/module_type.json.sample
@@ -12,7 +12,7 @@
   ],
   "configuration_spec": [
     {
-      "key": "custom_API_KEY",
+      "key": "custom_key",
       "type": "api_key",
       "label": "API KEY",
       "tooltip": "The module API KEY",
