--- a/scripts/supervisord.ini
+++ b/scripts/supervisord.ini
@@ -1,6 +1,8 @@
 [supervisord]
 nodaemon=true
-user=root
+logfile=/tmp/supervisord.log
+pidfile = /tmp/supervisord.pid
+user = ciscosec
 
 [program:syslog-ng]
 command=/usr/sbin/syslog-ng --foreground -f /syslog-ng.conf --no-caps
