--- a/scripts/uwsgi.ini
+++ b/scripts/uwsgi.ini
@@ -12,3 +12,4 @@ uid = uwsgi
 log-x-forwarded-for = true
 log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
 log-master = true
+virtualenv = /.venv
