--- a/code/Pipfile
+++ b/code/Pipfile
@@ -9,7 +9,7 @@ marshmallow = "==3.12.1"
 requests = "==2.25.1"
 rfapi = "==2.6.0"
 Flask = "==2.0.1"
-PyJWT = {version = "==2.1.0", extras = ["crypto"]}
+PyJWT = "==2.1.0"
 
 [dev-packages]
 flake8 = "==3.9.2"
